# AppImageUpdate

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md  main.vala  progress.vala
.github/workflows/: main.yml  ubuntu.yml
AppImageUpdate.AppDir/usr/share/metainfo/: appimageupdate.appdata.xml
ci/: Dockerfile  Dockerfile.i386  Dockerfile.x86_64  Dockerfile.xenial-i386  Dockerfile.xenial-x86_64  build-appimages.sh  build-in-docker.sh  entrypoint.sh  install-gtest.sh  libgcrypt.pc
ci/pkgconfig/: gpg-error.pc  gpgme.pc  libassuan.pc
cmake/: AppImageUpdateConfig.cmake.in  DownloadProject.LICENSE.txt  DownloadProject.cmake  config.cmake.in  cpack-deb.cmake  export.cmake
cmake/tests/: try_argagg.cpp
cmake/toolchains/: i386-linux-gnu.cmake
include/appimage/: update.h
include/appimage/update/: qt-ui.h
lib/: CMakeLists.txt
resources/: AppImage.xpm  AppImageUpdate-Qt.desktop  AppImageUpdate-Qt.ignore  AppImageUpdate.desktop  AppImageUpdate.ignore  Dockerfile  appimageupdate-keyring.gpg  appimageupdate.desktop  appimageupdate.ignore  appimageupdategui.desktop  appimageupdategui.ignore  appimageupdatetool.desktop  appimageupdatetool.ignore  bootstrap-container.sh  build-appimages.sh  build-in-docker.sh  validate.desktop
src/: CMakeLists.txt  appimage.h  gui_main.cpp  main.cpp  updater.cpp  util.h
src/appimage/: CMakeLists.txt  appimage.cpp  appimage.h
src/cli/: CMakeLists.txt  main.cpp
src/elf/: CMakeLists.txt
src/fltk-ui/: CMakeLists.txt  gui_main.cpp
src/qt-ui/: CMakeLists.txt  main.cpp  qt-updater.cpp  spoiler.cpp  spoiler.h
src/signing/: CMakeLists.txt  signaturevalidator.cpp  signaturevalidator.h  validate_main.cpp
src/update_methods/: pling_v1_zsync.cpp  pling_v1_zsync.h
src/updateinformation/: AbstractUpdateInformation.cpp  AbstractUpdateInformation.h  CMakeLists.txt  GenericZsyncUpdateInformation.cpp  GenericZsyncUpdateInformation.h  GithubReleasesZsyncUpdateInformation.cpp  GithubReleasesZsyncUpdateInformation.h  PlingV1UpdateInformation.cpp  PlingV1UpdateInformation.h  common.h  factory.cpp  factory.h  updateinformation.cpp  updateinformation.h
src/updater/: CMakeLists.txt  updater.cpp
src/util/: CMakeLists.txt  updatableappimage.cpp  updatableappimage.h  util.cpp  util.h
src/validate/: CMakeLists.txt  validate_main.cpp
ui/: progress.ui
