add_subdirectory(zsync2 EXCLUDE_FROM_ALL)

if(NOT USE_SYSTEM_LIBAPPIMAGE)
    add_subdirectory(libappimage EXCLUDE_FROM_ALL)
    set(APPIMAGE_LIB libappimage_shared PARENT_SCOPE)
else()
    find_library(APPIMAGE_LIB appimage)
    if(NOT APPIMAGE_LIB)
        message(FATAL_ERROR "appimage library not found")
    endif()
endif()
